Implemented `get()` and `set()` methods